--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ repositories {
 
 dependencies {
 	
+	// spring security
+	compile 'org.springframework.security:spring-security-web:3.2.4.RELEASE'
+	compile 'org.springframework.security:spring-security-config:3.2.4.RELEASE'
+	
 	// spring boot
 	compile "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
 	compile "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
