--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,6 +1,6 @@
 # jdbc properties
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.0.15:3306/springbootbase?createDatabaseIfNotExist=true
+jdbc.url=jdbc:mysql://192.168.0.15:3306/springboot?createDatabaseIfNotExist=true
 jdbc.user=root
 jdbc.pass=root
 
